@@ -7,7 +7,6 @@ BIG_OUTPUT_FORMAT="elf64-tradbigmips"
 LITTLE_OUTPUT_FORMAT="elf64-tradlittlemips"
 
 # Magic sections.
-INITIAL_READONLY_SECTIONS='.MIPS.options : { *(.MIPS.options) }'
 OTHER_TEXT_SECTIONS='*(.mips16.fn.*) *(.mips16.call.*)'
 OTHER_SECTIONS='
   .gptab.sdata : { *(.gptab.data) *(.gptab.sdata) }
@@ -15,4 +14,3 @@ OTHER_SECTIONS='
 '
 
 TEXT_START_ADDR="0x120000000"
-TEXT_DYNAMIC=
